--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container-fluid">
-        <img href="assets/images/ian.jpg" alt="me">
+        <img src="assets/images/ian.jpg" alt="me">
         <h1>This is a picture of me</h1>
     </div>
 
