--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 <body>
     <div class="container-fluid">
-        <img src="assets/images/ian.jpg" alt="me">
-        <h1>This is a picture of me</h1>
+        <h1>Hello World</h1>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
