Added grid layout

--- a/index.html
+++ b/index.html
@@ -10,8 +10,23 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <h1>Hello World</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-4" style="background-color: blue">
+                <h1>Hello world</h1>
+            </div>
+            <div class="col">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur tempora provident! Corporis
+                    impedit ipsum animi consectetur cupiditate facere velit voluptatem explicabo nemo necessitatibus
+                    illo similique, officiis quibusdam inventore eveniet deleniti praesentium nihil voluptatum
+                    aspernatur quasi nesciunt? Laboriosam eos consequuntur nemo, vero quasi magnam magni autem
+                    voluptates cum perspiciatis deleniti, nam amet sint distinctio beatae officia totam quia! Voluptas,
+                    aperiam. Ipsa, itaque laboriosam aliquid laudantium delectus, nemo, soluta voluptatibus dignissimos
+                    ullam aperiam unde ex id fugit obcaecati cum. Necessitatibus esse, vero voluptas, illo, fuga
+                    officiis ullam facere cumque nesciunt magnam nihil quaerat laudantium reprehenderit provident beatae
+                    nostrum consequatur itaque delectus?</p>
+            </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
