--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-4" style="background-color: blue">
-                <h1>Hello world</h1>
+            <div class="col-4 sidebar">
+                <img src="assets/images/portait.jpg" width="100%" alt="portait of me">
+                <h1>Brandon Gasser</h1>
+                <h4>North Dakota State University</h4>
+                <h4>Computer Science</h4>
             </div>
             <div class="col">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur tempora provident! Corporis
@@ -25,6 +28,23 @@
                     ullam aperiam unde ex id fugit obcaecati cum. Necessitatibus esse, vero voluptas, illo, fuga
                     officiis ullam facere cumque nesciunt magnam nihil quaerat laudantium reprehenderit provident beatae
                     nostrum consequatur itaque delectus?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, ipsa, debitis dolores dignissimos
+                    explicabo non ipsum voluptatibus maiores distinctio reprehenderit quam perferendis accusamus ex
+                    labore recusandae neque eius libero corrupti impedit dolor? Odio reprehenderit veniam quam,
+                    explicabo labore quas molestiae debitis commodi nisi aspernatur esse architecto nam blanditiis
+                    assumenda eaque?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae vitae, ipsa unde, id omnis
+                    temporibus pariatur earum rerum molestiae cumque qui minus distinctio libero exercitationem iure
+                    nemo non soluta! Eos maiores quisquam ab incidunt nihil excepturi possimus quibusdam facilis. Velit
+                    nobis dolor dignissimos voluptatum consequuntur deleniti odio necessitatibus sunt rerum quaerat sint
+                    blanditiis, quas culpa exercitationem illum dicta, officia vitae at? Blanditiis deserunt aperiam,
+                    animi, perferendis suscipit doloribus esse ullam necessitatibus dicta distinctio vitae obcaecati
+                    nesciunt praesentium. Blanditiis excepturi illo recusandae? Atque eos molestias, ad ex commodi ab
+                    reiciendis aliquid officia, alias deserunt tempore. Natus magnam nisi, pariatur asperiores numquam
+                    fugiat laborum architecto dolor, ea itaque, facilis deserunt voluptatem. Soluta asperiores rerum
+                    nobis ab quo hic dignissimos molestias eaque excepturi quis aspernatur adipisci vel dolore sint sunt
+                    eum nostrum earum numquam, nam facilis nisi porro repellat laudantium? Nobis minus quas, pariatur
+                    laboriosam, dolorem molestiae inventore nam quod, nulla cum eveniet.</p>
             </div>
         </div>
     </div>
