--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-4 sidebar">
-                <img src="assets/images/portait.jpg" width="100%" alt="portait of me">
+                <img src="/assets/images/portait.jpg" width="100%" alt="portait of me">
                 <h1>Brandon Gasser</h1>
                 <h4>North Dakota State University</h4>
                 <h4>Computer Science</h4>
