--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="col-4 sidebar">
                 <img src="/assets/images/portait.jpg" width="100%" alt="portait of me">
                 <h1>Brandon Gasser</h1>
-                <h4>North Dakota State University</h4>
-                <h4>Computer Science</h4>
+                <h2>North Dakota State University</h2>
+                <h2>Computer Science</h2>
             </div>
             <div class="col">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur tempora provident! Corporis
@@ -58,6 +58,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="/assets/scripts/script.js"></script>
 </body>
 
 </html>
