Added some biography

--- a/index.html
+++ b/index.html
@@ -19,32 +19,21 @@
                 <h2>Computer Science</h2>
             </div>
             <div class="col">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur tempora provident! Corporis
-                    impedit ipsum animi consectetur cupiditate facere velit voluptatem explicabo nemo necessitatibus
-                    illo similique, officiis quibusdam inventore eveniet deleniti praesentium nihil voluptatum
-                    aspernatur quasi nesciunt? Laboriosam eos consequuntur nemo, vero quasi magnam magni autem
-                    voluptates cum perspiciatis deleniti, nam amet sint distinctio beatae officia totam quia! Voluptas,
-                    aperiam. Ipsa, itaque laboriosam aliquid laudantium delectus, nemo, soluta voluptatibus dignissimos
-                    ullam aperiam unde ex id fugit obcaecati cum. Necessitatibus esse, vero voluptas, illo, fuga
-                    officiis ullam facere cumque nesciunt magnam nihil quaerat laudantium reprehenderit provident beatae
-                    nostrum consequatur itaque delectus?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, ipsa, debitis dolores dignissimos
-                    explicabo non ipsum voluptatibus maiores distinctio reprehenderit quam perferendis accusamus ex
-                    labore recusandae neque eius libero corrupti impedit dolor? Odio reprehenderit veniam quam,
-                    explicabo labore quas molestiae debitis commodi nisi aspernatur esse architecto nam blanditiis
-                    assumenda eaque?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae vitae, ipsa unde, id omnis
-                    temporibus pariatur earum rerum molestiae cumque qui minus distinctio libero exercitationem iure
-                    nemo non soluta! Eos maiores quisquam ab incidunt nihil excepturi possimus quibusdam facilis. Velit
-                    nobis dolor dignissimos voluptatum consequuntur deleniti odio necessitatibus sunt rerum quaerat sint
-                    blanditiis, quas culpa exercitationem illum dicta, officia vitae at? Blanditiis deserunt aperiam,
-                    animi, perferendis suscipit doloribus esse ullam necessitatibus dicta distinctio vitae obcaecati
-                    nesciunt praesentium. Blanditiis excepturi illo recusandae? Atque eos molestias, ad ex commodi ab
-                    reiciendis aliquid officia, alias deserunt tempore. Natus magnam nisi, pariatur asperiores numquam
-                    fugiat laborum architecto dolor, ea itaque, facilis deserunt voluptatem. Soluta asperiores rerum
-                    nobis ab quo hic dignissimos molestias eaque excepturi quis aspernatur adipisci vel dolore sint sunt
-                    eum nostrum earum numquam, nam facilis nisi porro repellat laudantium? Nobis minus quas, pariatur
-                    laboriosam, dolorem molestiae inventore nam quod, nulla cum eveniet.</p>
+                <p>My name is Brandon Gasser. I am a computer science student at North Dakota State University. I
+                    currently work at Data Recognition Corporation as a software development intern.</p>
+                <p>I am a member of the NDSU student chapter of the ACM. In the ACM, I lead a
+                    special interest group on functional programming, which is taught in Haskell. I also served as the
+                    Vice-Chair of the NDSU chapter of the ACM during the 2023-2024 academic year.</p>
+                <p>I am also a member of Bison Robotics at NDSU. I work on the Autonomous Snowplow and NASA Lunabotics
+                    projects. I am also a co-project lead for the Robot in 3 Days project in Bison Robotics.</p>
+                <p>In addition to my projects in Bison Robotics, I am involved in FIRST Robotics Competition. I
+                    volunteer at competitions as a control system advisor as well as mentoring a team.</p>
+                <div class="logos">
+                    <a href="https://firstinspires.org"><img class="logo" src="/assets/images/FIRST-Logo.png"
+                            alt="FIRST"></a>
+                    <a href="https://www.ndsubisonrobotics.org/"><img class="logo"
+                            src="/assets/images/bison-robotics-logo.png" alt="Bison Robotics"></a>
+                </div>
             </div>
         </div>
     </div>
