--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -17,6 +18,10 @@
                 <h1>Brandon Gasser</h1>
                 <h2>North Dakota State University</h2>
                 <h2>Computer Science</h2>
+                <div class="socials">
+                    <a href="https://github.com/brandongasser"><i class="fa fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/brandon-gasser-530127228/"><i class="fa fa-linkedin-square"></i></a>
+                </div>
             </div>
             <div class="col">
                 <p>My name is Brandon Gasser. I am a computer science student at North Dakota State University. I
@@ -28,12 +33,14 @@
                     projects. I am also a co-project lead for the Robot in 3 Days project in Bison Robotics.</p>
                 <p>In addition to my projects in Bison Robotics, I am involved in FIRST Robotics Competition. I
                     volunteer at competitions as a control system advisor as well as mentoring a team.</p>
-                <div class="logos">
-                    <a href="https://firstinspires.org"><img class="logo" src="/assets/images/FIRST-Logo.png"
-                            alt="FIRST"></a>
-                    <a href="https://www.ndsubisonrobotics.org/"><img class="logo"
-                            src="/assets/images/bison-robotics-logo.png" alt="Bison Robotics"></a>
-                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="logos col-12">
+                <a href="https://firstinspires.org"><img class="logo" src="/assets/images/FIRST-Logo.png"
+                        alt="FIRST"></a>
+                <a href="https://www.ndsubisonrobotics.org/"><img class="logo"
+                        src="/assets/images/bison-robotics-logo.png" alt="Bison Robotics"></a>
             </div>
         </div>
     </div>
