--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <h2>Computer Science</h2>
                 <div class="socials">
                     <a href="https://github.com/brandongasser"><i class="fa fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/brandon-gasser-530127228/"><i class="fa fa-linkedin-square"></i></a>
+                    <a href="https://www.linkedin.com/in/brandon-gasser-530127228/"><i
+                            class="fa fa-linkedin-square"></i></a>
                 </div>
             </div>
             <div class="col">
@@ -37,10 +38,12 @@
         </div>
         <div class="row">
             <div class="logos col-12">
-                <a href="https://firstinspires.org"><img class="logo" src="/assets/images/FIRST-Logo.png"
+                <a href="https://www.firstinspires.org/"><img class="logo" src="/assets/images/FIRST-Logo.png"
                         alt="FIRST"></a>
-                <a href="https://www.ndsubisonrobotics.org/"><img class="logo"
+                <a href="https://www.ndsubisonrobotics.org/" alt="Bison Robotics"><img class="logo"
                         src="/assets/images/bison-robotics-logo.png" alt="Bison Robotics"></a>
+                <a href="https://www.ndacm.org/"><img class="logo" src="/assets/images/acm-logo-long.png"
+                        alt="NDSU ACM"></a>
             </div>
         </div>
     </div>
