Updated ACM logo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         alt="FIRST"></a>
                 <a href="https://www.ndsubisonrobotics.org/" alt="Bison Robotics"><img class="logo"
                         src="/assets/images/bison-robotics-logo.png" alt="Bison Robotics"></a>
-                <a href="https://www.ndacm.org/"><img class="logo" src="/assets/images/acm-logo-long.png"
+                <a href="https://www.ndacm.org/"><img class="logo acm-logo" src="/assets/images/acm-logo.png"
                         alt="NDSU ACM"></a>
             </div>
         </div>
